# powercess

./: Cargo.toml  Cross.toml  Dockerfile.cross  README.md  config.toml  pg_build.sh
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml
database/timescaledb/: init.sql
docker/: Dockerfile.cross.aarch64  Dockerfile.cross.armv7  Dockerfile.cross.i686
docs/: device-setup.md  quick-start.md
src/: config.rs  error.rs  main.rs  model.rs
src/ble/: client.rs  protocol.rs
src/monitor/: mod.rs
src/reporter/: database.rs  http.rs  mod.rs
src/store/: combined.rs  mod.rs  postgres.rs  sqlite.rs  static_store.rs
web/power_monitor/: nuxt.config.ts  package.json
web/power_monitor/app/api/: client.ts  devices.ts  measurements.ts
web/power_monitor/app/components/PowerMonitor/: MeasurementCard.vue  StatusBar.vue  index.vue
web/power_monitor/app/composables/: usePowerMonitor.ts  usePowerWebSocket.ts
web/power_monitor/app/pages/: index.vue  test.vue
web/power_monitor/app/types/: device.ts  index.ts  measurement.ts
web/power_monitor/docker/: .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf
