[package]
name = "powercess"
version = "1.4.2"
edition = "2021"

# ── Feature 开关 ────────────────────────────────────────────────────────────────
[features]
default = ["store-sqlite", "reporter-http"]
# bundled: 从内嵌的 SQLite C 源码编译，无需系统 libsqlite3-dev
store-sqlite   = ["dep:sqlx", "sqlx/sqlite", "dep:libsqlite3-sys"]
store-postgres = ["dep:sqlx", "sqlx/postgres"]
reporter-http  = ["dep:axum", "dep:tower", "dep:tower-http"]

# ──────────────────────────────────────────────────────────────────────────────
# 所有依赖统一写在 [dependencies] 中，避免 [dependencies.xxx] 节把后续行吃掉
# ──────────────────────────────────────────────────────────────────────────────
[dependencies]
# 运行时（树莓派 4：worker 线程数由配置控制，不硬编码 flavor）
tokio        = { version = "1",   features = ["full", "signal"] }
futures      = "0.3"

# BLE
btleplug     = "0.11"
uuid         = { version = "1", features = ["v4"] }

# 序列化
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# 数据库（可选）
sqlx            = { version = "0.8.6", optional = true, features = ["runtime-tokio-rustls", "chrono", "json"] }
# bundled feature：编译内嵌 SQLite 源码，无需系统 libsqlite3，跨平台编译友好
# 版本需与 sqlx 0.8.x 传递引入的 libsqlite3-sys 版本一致（~0.29），Cargo 会合并 feature
libsqlite3-sys  = { version = "0.30.1", optional = true, features = ["bundled"] }

# HTTP（可选）
axum         = { version = "0.8", optional = true, features = ["ws"] }
tower        = { version = "0.5", optional = true }
tower-http   = { version = "0.6", optional = true, features = ["cors", "trace"] }

# 错误处理
anyhow       = "1"
thiserror    = "2"

# 命令行参数解析
clap         = { version = "4", features = ["derive"] }

# 结构化日志
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# 无锁并发缓存（适合树莓派低延迟场景）
dashmap      = "6"

# async trait
async-trait  = "0.1"

# 时间
chrono       = { version = "0.4", features = ["serde"] }

# ── Linux 平台特定 ────────────────────────────────────────────────────────────
# btleplug 在 Linux 上通过 dbus crate 访问 BlueZ，dbus 是唯一必须的 C 依赖。
# vendored feature：从内嵌的 D-Bus C 源码编译并静态链接，
# 消除对系统 libdbus-1-dev 包的依赖，使交叉编译 Dockerfile 大幅简化。
# 配置文件（重命名为 config_crate，避免与 mod config 冲突）
config_crate = { version = "0.15", package = "config" }

# ── Linux 平台特定 ────────────────────────────────────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
